tests/paczka1/fuzzy1/13923200.err
Error in line 13: wUTsi S112 39,6
Error in line 16: wUTsi A143 66,1
Error in line 32: bJIU S112 16,4
Error in line 20: QLTwSyZF A143 115,4
